Fix wrapping issue
The swatches were not wrapping if the screen wasn't wide enough

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,8 @@ body {
   font-family: sans-serif;
   font-size: 12px;
   color: #444;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .swatch {
@@ -41,7 +43,7 @@ body {
 }
 
 .swatch:not(:last-of-type) {
-  margin-right: 20px;
+  /* margin-right: 20px; */
 }
 
 .header {
